--- a/test/test.html
+++ b/test/test.html
@@ -150,7 +150,7 @@
 
   window.tagified = {
     "mix"               : 1,
-    "basic"             : 1,
+    "basic"             : 0,
     "textarea"          : 0,
     "manual-suggestions": 0,
     "outside-of-the-box": 0,
@@ -183,7 +183,7 @@
   tagified["basic"] && (function(){
     var sectionElm = document.querySelector('#section-basic');
 
-    new Tagify(sectionElm.querySelector('input[name=value_empty_JSON]'), {
+    var emptyJSONTagify = new Tagify(sectionElm.querySelector('input[name=value_empty_JSON]'), {
         addTagOnBlur: false,
         autoComplete : {
             rightKey:true
@@ -203,6 +203,7 @@
             },
         ]
     })
+
 
 
     var tagify3 = new Tagify(sectionElm.querySelector('input[name=value_JSON]'), {
@@ -411,9 +412,7 @@
   }
 
   var simpleMixTagify = new Tagify(simpleMixInput, settings);
-  setTimeout(function(){
-    simpleMixTagify.addTags("alice")
-  }, 1500)
+
 
   //////////////////////////////
 
@@ -510,6 +509,13 @@
 
     console.log('mix-mode "input" event value: ', e.detail)
   })
+
+  // window.addEventListener("dblclick", insertTag)
+
+  function insertTag() {
+    tagify.addTags("xxx");
+    tagify.DOM.input.focus();
+  }
 
 
   })()
