--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
                     <details>
                       <summary></summary>
                       <h3>HTML</h3>
-<pre class="language-markup"><code>&lt;input name='basic' value='tag1, tag2'&gt;</code></pre>
+<pre class="language-markup"><code>&lt;input name='basic' value='tag1, tag2 autofocus'&gt;</code></pre>
                       <h3>JAVASCRIPT</h3>
                       <script>renderPRE(document.currentScript, "basic")</script>
                     </details>
