--- a/test/test.html
+++ b/test/test.html
@@ -189,7 +189,7 @@
             rightKey:true
         },
         dropdown: {
-            enabled: 1,
+            enabled: 0,
             mapValueTo: "email"
         },
         whitelist: [
@@ -200,6 +200,14 @@
             {
                 value: 'Alon Silko',
                 email: 'alon@gmail.com',
+            },
+            {
+                value: 'aaa',
+                email: '1111alon@gmail.com',
+            },
+            {
+                value: 'aaaaa1',
+                email: '11aaa@gmail.com',
             },
         ]
     })
