added CSS variables to the setting styling menu

--- a/index.html
+++ b/index.html
@@ -343,6 +343,18 @@
                     <span class='key'>tag-invalid-bg</span>
                     <input type='color' name='tag-invalid-color' value="#D39494" />
                 </div>
+                <div>
+                    <span class='key'>placeholder-color</span>
+                    <input type='color' name='placeholder-color' value="rgba(0,0,0,.4)" />
+                </div>
+                <div>
+                    <span class='key'>placeholder-color-focus</span>
+                    <input type='color' name='placeholder-color-focus' value="rgba(0,0,0,.25)" />
+                </div>
+                <div>
+                    <span class='key'>input-color</span>
+                    <input type='color' name='input-color' value="#000" />
+                </div>
             </div>
         </header>
 
